--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - /var/lib/postgresql/data/
+     - data_value:/var/lib/postgresql/data/
     env_file:
       - ./.env
   web:
@@ -17,18 +17,19 @@ services:
     env_file:
       - ./.env
   nginx:
-    image: nginx:1.23.3-alpine
+    image: nginx:1.21.3-alpine
     ports:
-      - "80:80"
-
+      - '80:80'
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/templates/:/etc/nginx/templates
       - static_value:/var/html/static/
       - media_value:/var/html/media/
-
+    env_file:
+      - ./.env
     depends_on:
       - web
 
 volumes:
+  data_value:
   static_value:
   media_value:
