--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
     ports:
       - '80:80'
     volumes:
-      - ./nginx/templates/:/etc/nginx/templates
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     env_file:
