--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,9 +1,9 @@
-
+version: '3.7'
 services:
   db:
     image: postgres:13.0-alpine
     volumes:
-     - data_value:/var/lib/postgresql/data/
+    - data_value:/var/lib/postgresql/data/
     env_file:
       - ./.env
   web:
@@ -28,7 +28,6 @@ services:
       - ./.env
     depends_on:
       - web
-
 volumes:
   data_value:
   static_value:
